<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="100dp"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/more_info_appbarlayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      >
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:collapsedTitleTextAppearance="@style/CollapsedAppBar.normal"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleGravity="center"
        app:expandedTitleTextAppearance="@style/CollapsedAppBar.expand"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:title="@string/app_name"
        >


      <ImageView
          android:id="@+id/imageView"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:scaleType="fitXY"
          android:src="@drawable/ucsd"
          app:layout_collapseMode="parallax"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />


      <androidx.appcompat.widget.Toolbar
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:layout_collapseMode="pin"
          app:title="@string/title_more"
          app:titleTextColor="@android:color/white"
          />

    </com.google.android.material.appbar.CollapsingToolbarLayout>
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/materialTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="28dp"
          android:layout_marginEnd="16dp"
          android:gravity="center"
          android:text="@string/app_description"
          android:textSize="16sp"
          />

      <View
          android:id="@+id/view2"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="24dp"
          android:background="@color/warning"
          />

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/more_info_version"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="Version: "
          />
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/warning"
          />
      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/more_info_rate_app"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:background="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:drawableStart="@drawable/ic_google_play_24dp"
          android:drawablePadding="16dp"
          android:drawableTint="@color/warning"
          android:focusable="true"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="Rate app"
          />
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/warning"
          />
      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/more_info_send_feedback"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:drawableStart="@drawable/ic_email_black_24dp"
          android:drawablePadding="16dp"
          android:drawableTint="@color/warning"
          android:focusable="true"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="Contact us"
          />
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/warning"
          />
      <com.google.android.material.textview.MaterialTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:text="Contact: "
          android:textSize="16sp"
          />


      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/more_info_call_office_bt"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:drawableStart="@drawable/ic_call_black_24dp"
          android:drawablePadding="16dp"
          android:drawableTint="@color/warning"
          android:focusable="true"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="Call shuttle office: (858) 534-7422"
          />

      <View
          android:id="@+id/view3"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/warning"
          />

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/more_info_shuttle_website"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:drawableStart="@drawable/ic_link_white_24dp"
          android:drawablePadding="16dp"
          android:drawableTint="@color/warning"
          android:focusable="true"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="Offical shuttle website"
          />
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/warning"
          />
      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/more_info_email_shuttle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:drawableStart="@drawable/ic_email_black_24dp"
          android:drawablePadding="16dp"
          android:drawableTint="@color/warning"
          android:focusable="true"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="Email shuttle department"
          />
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/warning"
          />
      <com.google.android.material.textview.MaterialTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:text="Other: "
          android:textSize="16sp"
          />

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/more_info_github"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:drawableStart="@drawable/ic_github_white_24dp"
          android:drawablePadding="16dp"
          android:drawableTint="@color/warning"
          android:focusable="true"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="Github"
          />
      <View
          android:id="@+id/view5"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/warning"
          />
      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/more_info_private_policy"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:drawableStart="@drawable/ic_link_white_24dp"
          android:drawablePadding="16dp"
          android:drawableTint="@color/warning"
          android:focusable="true"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="Private Policy"
          />
      <View
          android:id="@+id/view6"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/warning"
          />


    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/more_info_share_fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:layout_anchor="@id/more_info_appbarlayout"
      app:layout_anchorGravity="bottom|end"
      app:tint="@color/fab_icon_color"
      app:backgroundTint="@color/fab_bg_color"
      app:srcCompat="@drawable/ic_share_white_24dp"
      />
</androidx.coordinatorlayout.widget.CoordinatorLayout>